Fix compilation with libcelt on Apple OS X.

Fixes ticket #97.